# mowgk-kd

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  footer.tex  header.tex  plot.sh  tests.tex
benchmark/: benchmark.cpp
cmake/: utils.cmake
data/shader/: color.frag  proj_color.vert  proj_texture.vert
extlibs/: FindSandbox.cmake
include/: kd_tree.h
results/: fun.data  fun_0.data  fun_1.data  fun_2.data  fun_3.data  fun_times.data
src/: kd_tree.h  main.cpp
